--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   },
   "dependencies": {
     "expo": "~50.0.5",
+    "expo-build-properties": "~0.11.1",
+    "expo-device": "~5.9.3",
+    "expo-notifications": "~0.27.6",
     "expo-status-bar": "~1.11.1",
+    "expo-system-ui": "~2.9.3",
     "react": "18.2.0",
     "react-native": "0.73.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/node": "^20.11.16",
     "@types/react": "~18.2.45",
     "typescript": "^5.1.3"
   },
